--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 # Copy this file to .env and fill in your values
 GROQ_API_KEY=your_groq_api_key_here
+CONTRIBUTOR=your_name_here   # unique short name, e.g. alice — used to prefix data files
